thuat update giá theo loại đơn

--- a/public/css/bill.css
+++ b/public/css/bill.css
@@ -1,6 +1,4 @@
-.errors-customerName, .errors-staffName, .errors-productName,.errors-statusBill, 
-.errors-branchName, .errors-completeBill, .errors-payment_at,.errors-delivered_at,
-.errors-deposit,.errors-payment {
+.sml-er{
     color: red;
 }
 .error {
