--- a/public/css/image.css
+++ b/public/css/image.css
@@ -14,3 +14,25 @@
     width: 180px;
     height:260px;
   }
+  .imageThumb {
+    max-height: 300px;
+    border: 2px solid;
+    padding: 1px;
+    cursor: pointer;
+  }
+  .pip {
+    display: inline-block;
+    margin: 10px 10px 0 0;
+  }
+  .remove {
+    display: block;
+    background: #444;
+    border: 1px solid black;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+  }
+  .remove:hover {
+    background: white;
+    color: black;
+  }
